Add missing row of numbers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/app.js"></script>
+    <script src="js/app.js" defer></script>
     <title>Calculator</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
 
           <button class="number-btn" data-key="7">7</button>
           <button class="number-btn" data-key="8">8</button>
-          <button class="number-btn" data-key="9">0</button>
+          <button class="number-btn" data-key="9">9</button>
           <button class="operator-btn" data-key="*">x</button>
 
           <button class="number-btn" data-key="4">4</button>
@@ -35,10 +35,14 @@
           <button class="number-btn" data-key="6">6</button>
           <button class="operator-btn" data-key="-">-</button>
 
+          <button class="number-btn" data-key="1">1</button>
+          <button class="number-btn" data-key="2">2</button>
+          <button class="number-btn" data-key="3">3</button>
+          <button class="operator-btn" data-key="+">+</button>
+
           <button class="number-btn" data-key="0">0</button>
           <button class="decimal-btn" data-key=".">.</button>
           <button class="equals-btn" data-key="=">=</button>
-          <button class="operator-btn" data-key="-">+</button>
         </div>
       </section>
     </main>
