--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
         <div class="calculator__screen"></div>
 
         <div class="calcultator__btns grid">
-          <button class="clear-btn" data-key="ac">AC</button>
-          <button class="clear-btn" data-key="c">C</button>
-          <button class="operator-btn" data-key="%">%</button>
-          <button class="operator-btn" data-key="/">÷</button>
+          <button class="clear-btn" data-all-clear>AC</button>
+          <button class="clear-btn" data-clear>C</button>
+          <button class="operator-btn" data-operator="%">%</button>
+          <button class="operator-btn" data-operator="/">÷</button>
 
-          <button class="number-btn" data-key="7">7</button>
-          <button class="number-btn" data-key="8">8</button>
-          <button class="number-btn" data-key="9">9</button>
-          <button class="operator-btn" data-key="*">x</button>
+          <button class="number-btn" data-number>7</button>
+          <button class="number-btn" data-number>8</button>
+          <button class="number-btn" data-number>9</button>
+          <button class="operator-btn" data-operator>x</button>
 
-          <button class="number-btn" data-key="4">4</button>
-          <button class="number-btn" data-key="5">5</button>
-          <button class="number-btn" data-key="6">6</button>
-          <button class="operator-btn" data-key="-">-</button>
+          <button class="number-btn" data-number>4</button>
+          <button class="number-btn" data-number>5</button>
+          <button class="number-btn" data-number>6</button>
+          <button class="operator-btn" data-operator>-</button>
 
-          <button class="number-btn" data-key="1">1</button>
-          <button class="number-btn" data-key="2">2</button>
-          <button class="number-btn" data-key="3">3</button>
-          <button class="operator-btn" data-key="+">+</button>
+          <button class="number-btn" data-number="">1</button>
+          <button class="number-btn" data-number="">2</button>
+          <button class="number-btn" data-number="">3</button>
+          <button class="operator-btn" data-operator>+</button>
 
-          <button class="number-btn" data-key="0">0</button>
-          <button class="decimal-btn" data-key=".">.</button>
-          <button class="equals-btn" data-key="=">=</button>
+          <button class="number-btn" data-number>0</button>
+          <button class="number-btn" data-number>.</button>
+          <button class="equals-btn" data-equals>=</button>
         </div>
       </section>
     </main>
